# adaptive-data

./: .gitignore  .gitmodules  .jenkins_script.sh  .travis.yml  AdaptiveBag.hs  DEVLOG.md  DEVLOG.txt  Entry.hs  OldBag.hs  PureBag.hs  README.md  ScalableBag.hs  adaptive-data.cabal  note.hs  run_benchmarks.sh  stack.yaml
adaptive-hashmap/: .gitignore  Dockerfile  Main.hs  adaptive-hashmap.cabal  bench.plt  run.sh  run1.sh  run_benchmarks.sh  setup_env.sh  stack.yaml
adaptive-hashmap/data/cold/: params.txt  report.plt
adaptive-hashmap/data/cold-gc/: report.plt
adaptive-hashmap/data/cold-gc/report/: curve0.csv  curve1.csv  curve2.csv
adaptive-hashmap/data/cold/report/: curve0.csv  curve1.csv  curve2.csv  curve3.csv
adaptive-hashmap/data/hot/: params.txt  report.plt
adaptive-hashmap/data/hot-and-cold/: report.plt
adaptive-hashmap/data/hot/report/: curve0.csv  curve1.csv  curve2.csv  curve3.csv
adaptive-hashmap/data/hotcold/: params.txt  report.plt
adaptive-hashmap/data/hotcold-size/: params.txt  report.plt
adaptive-hashmap/data/hotcold-size/report/: curve0.csv  curve1.csv  curve2.csv  curve3.csv
adaptive-hashmap/data/hotcold/report/: curve0.csv  curve1.csv  curve2.csv  curve3.csv
adaptive-hashmap/data/transition/: report.plt
adaptive-hashmap/data/transition-size/: report.plt
adaptive-hashmap/data/transition-size/report/: curve0.csv  curve1.csv
adaptive-hashmap/data/transition/report/: curve0.csv  curve1.csv  curve2.csv
adaptive-hashmap/include/: AdaptiveMapCore.hs
adaptive-hashmap/src/: AdaptiveMap.hs  Ctrie.hs  EntryRef.hs  PureMap.hs  PureMapL.hs
adaptive-hashmap/src/Control/Concurrent/: Ctrie.hs  Map.hs  PureMap.hs  PureMapL.hs
adaptive-hashmap/src/Control/Concurrent/Adaptive/: AdaptiveMap.hs  Ctrie.hs  PureMap.hs
adaptive-hashmap/src/Control/Concurrent/Compact/: AdaptiveMap.hs  PureMap.hs  PureMap2.hs
adaptive-hashmap/src/Data/Concurrent/: Ctrie.hs  DB.hs  DBadaptive.hs  DBagz.hs  DBctrie.hs  DBgz.hs  DBpure.hs  IORef.hs  PureMap.hs  PureMapL.hs  Set.hs  SetAdaptive.hs  SetBit.hs  SetCtrie.hs
adaptive-hashmap/src/Data/Concurrent/Adaptive/: AdaptiveMap.hs
adaptive-hashmap/src/Data/Concurrent/Compact/: AdaptiveMap.hs  PureMap.hs
adaptive-hashmap/src/Data/Concurrent/Compact/Adaptive/: CtrieToCompact.hs  PureToCompact.hs
adaptive-hashmap/src/Data/Concurrent/Map/: Array.hs
adaptive-hashmap/tests/: Bench.hs  Bench1.hs  Bench2.hs  Bench3.hs  Bench4.hs  BenchFrz.hs  Types.hs  pldiBench.hs  setBench.hs
adaptive-queue/: adaptive-queue.cabal  stack.yaml
adaptive-queue/src/Control/Concurrent/: PureQueue.hs
adaptive-queue/src/Control/Concurrent/Adaptive/: AdaptiveQueue.hs  ChaseLevDeque.hs  MichaelScottQueue.hs
adaptive-queue/src/Data/Concurrent/: IORef.hs
adaptive_map_prototype/: adaptive-data.cabal
adaptive_map_prototype/src/Data/Concurrent/: AdaptSkipList.hs
chen_bag/: .gitignore  PureBag.hs  adaptive-bag.cabal  note.hs  run_benchmarks.sh  stack.yaml
chen_bag/src/: AdaptiveBag.hs  EntryRef.hs  PureBag.hs  ScalableBag.hs
chen_bag/tests/: Bench.hs
j_benchmark/: .classpath  dependency-reduced-pom.xml  new_map_object_benchmark  pom.xml  runNew~  run_benchmarks.sh
j_benchmark/src/main/java/benchmark/: Inserter.java  InsertionThread.java  MutablePersistentIntTreeMap.java  ObjectCreationCost.java  RandomHotColdkeyBecnhmark.java  SimpleInsertionBenchmark.java  Util.java
j_benchmark/src/main/java/hybrid_ds/: CopyThread.java  HybridIntMap.java  PureIntMap.java
lockfree-test/: bench_fillN.sh  lockfree-test.cabal  run_benchmarks.sh
lockfree-test/src/Data/Concurrent/: AdaptiveBag.hs  PureBag.hs  ScalableBag.hs  ScalableBagBoxed.hs  ScalableBagChaseLev.hs
lockfree-test/test/: Bench.hs
old_peter_bag_test/: bench_fillN.sh  lockfree-test.cabal
older/: stack.yaml
older/chen_bag/: LICENSE  adaptive-bag.cabal
older/chen_bag/src/: AdaptiveBag.hs  EntryRef.hs  PureBag.hs
older/chen_bag/tests/: Bench.hs
older/j_benchmark/: .project  dependency-reduced-pom.xml  new_map_object_benchmark
older/j_benchmark/src/main/java/benchmark/: Util.java
older/j_benchmark/src/main/java/hybrid_ds/: HybridIntMap.java  PureIntMap.java
older/old_peter_bag_test/: .gitignore
older/old_scripts/: run_benchmarks.sh
src/Data/Concurrent/: AdaptSkipList.hs
