name:                adaptive-hashmap
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Chao-Hong Chen
maintainer:          dreamlinuxer@gmail.com
-- copyright:
category:            Concurrency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


flag debug
  description: Do a debug compile.
  default: False
  manual: True


library
  exposed-modules:     Data.Concurrent.IORef,
                       Data.Concurrent.PureMap,
                       Data.Concurrent.PureMapL,
                       Data.Concurrent.Ctrie,
                       Data.Concurrent.Map.Array,
                       Data.Concurrent.Adaptive.AdaptiveMap,
                       Data.Concurrent.Compact.PureMap,
                       Data.Concurrent.Compact.Adaptive.CtrieToCompact,
                       Data.Concurrent.Compact.Adaptive.PureToCompact
  other-extensions:    BangPatterns, NamedFieldPuns, CPP, DeriveDataTypeable
  build-depends:       async >= 2.0.2,
                       atomic-primops >= 0.8,
                       base >=4.7 && <5,
                       cmdargs >= 0.10.13,
                       concurrent-extra >= 0.7.0.9,
                       extra >= 1.4.2,
                       hashable >= 1.2.3.3,
                       primitive >= 0.6,
                       thread-local-storage >= 0.1.0.3,
                       time >= 1.5.0.1,
                       unordered-containers >= 0.2.5.1,
                       concurrent-extra >= 0.7.0.9,
                       compact >=1.0 && <1.1,
                       deepseq >=1.4 && <1.5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -O2 -Wall -fobject-code
  include-dirs: include/

benchmark bench-adaptive-hashmap
    type: exitcode-stdio-1.0
    main-is: Bench.hs
    ghc-options: -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
    hs-source-dirs: tests/
    build-depends: adaptive-hashmap,
                   async >= 2.0,
                   atomic-primops >= 0.8,
                   base >= 4.6,
                   cmdargs >= 0.10.13,
                   extra >= 1.4.2,
                   pcg-random >= 0.1.3.2,
                   thread-local-storage >= 0.1.0.3,
                   time >= 1.5.0
    default-language: Haskell2010
    if flag(debug)
      ghc-options: -eventlog
      ghc-options: -keep-tmp-files -dsuppress-module-prefixes
                   -ddump-to-file -ddump-core-stats -ddump-simpl-stats -dcore-lint
                   -dcmm-lint -ddump-ds -ddump-simpl -ddump-stg -ddump-asm
                   -ddump-bcos -ddump-cmm -ddump-opt-cmm -ddump-inlinings

benchmark bench-adaptive-hashmap-1
    type: exitcode-stdio-1.0
    main-is: Bench1.hs
    ghc-options: -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
    -- TEMP:
    ghc-options: -eventlog
    hs-source-dirs: tests/
    other-modules: Types
    build-depends: adaptive-hashmap,
                   async >= 2.0,
                   atomic-primops >= 0.8,
                   base >= 4.6,
                   clock >= 0.6.0.1,
                   cmdargs >= 0.10.13,
                   directory >= 1.2.2,
                   extra >= 1.4.2,
                   gnuplot >= 0.5.4.1,
                   mtl >= 2.2.1,
                   pcg-random >= 0.1.3.2,
                   rdtsc >= 1.3.0.1,
                   thread-local-storage >= 0.1.0.3,
                   time >= 1.5.0,
                   vector >= 0.11.0.0,
                   containers
    default-language: Haskell2010
    if flag(debug)
      ghc-options: -eventlog
      ghc-options: -keep-tmp-files -dsuppress-module-prefixes
                   -ddump-to-file -ddump-core-stats -ddump-simpl-stats -dcore-lint
                   -dcmm-lint -ddump-ds -ddump-simpl -ddump-stg -ddump-asm
                   -ddump-bcos -ddump-cmm -ddump-opt-cmm -ddump-inlinings

benchmark bench-adaptive-hashmap-2
    type: exitcode-stdio-1.0
    main-is: Bench2.hs
    ghc-options: -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
    -- TEMP:
    ghc-options: -eventlog
    hs-source-dirs: tests/
    other-modules: Types
    build-depends: adaptive-hashmap,
                   async >= 2.0,
                   atomic-primops >= 0.8,
                   base >= 4.6,
                   clock >= 0.6.0.1,
                   cmdargs >= 0.10.13,
                   directory >= 1.2.2,
                   extra >= 1.4.2,
                   gnuplot >= 0.5.4.1,
                   mtl >= 2.2.1,
                   pcg-random >= 0.1.3.2,
                   rdtsc >= 1.3.0.1,
                   thread-local-storage >= 0.1.0.3,
                   time >= 1.5.0,
                   vector >= 0.11.0.0
    default-language: Haskell2010
    if flag(debug)
      ghc-options: -eventlog
      ghc-options: -keep-tmp-files -dsuppress-module-prefixes
                   -ddump-to-file -ddump-core-stats -ddump-simpl-stats -dcore-lint
                   -dcmm-lint -ddump-ds -ddump-simpl -ddump-stg -ddump-asm
                   -ddump-bcos -ddump-cmm -ddump-opt-cmm -ddump-inlinings

benchmark bench-adaptive-hashmap-3
    type: exitcode-stdio-1.0
    main-is: Bench3.hs
    ghc-options: -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
    -- TEMP:
    ghc-options: -eventlog
    hs-source-dirs: tests/
    other-modules: Types
    build-depends: adaptive-hashmap,
                   async >= 2.0,
                   atomic-primops >= 0.8,
                   base >= 4.6,
                   clock >= 0.6.0.1,
                   criterion >=1.1.1.0,
                   cmdargs >= 0.10.13,
                   deepseq >=1.4,
                   directory >= 1.2.2,
                   extra >= 1.4.2,
                   gnuplot >= 0.5.4.1,
                   mtl >= 2.2.1,
                   pcg-random >= 0.1.3.2,
                   rdtsc >= 1.3.0.1,
                   thread-local-storage >= 0.1.0.3,
                   time >= 1.5.0,
                   vector >= 0.11.0.0
    default-language: Haskell2010
    if flag(debug)
      ghc-options: -eventlog
      ghc-options: -keep-tmp-files -dsuppress-module-prefixes
                   -ddump-to-file -ddump-core-stats -ddump-simpl-stats -dcore-lint
                   -dcmm-lint -ddump-ds -ddump-simpl -ddump-stg -ddump-asm
                   -ddump-bcos -ddump-cmm -ddump-opt-cmm -ddump-inlinings

benchmark bench-adaptive-hashmap-4
    type: exitcode-stdio-1.0
    main-is: Bench4.hs
    ghc-options: -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
    -- TEMP:
    ghc-options: -eventlog
    hs-source-dirs: tests/
    other-modules: Types
    build-depends: adaptive-hashmap,
                   async >= 2.0,
                   atomic-primops >= 0.8,
                   base >= 4.6,
                   clock >= 0.6.0.1,
                   cmdargs >= 0.10.13,
                   directory >= 1.2.2,
                   extra >= 1.4.2,
                   gnuplot >= 0.5.4.1,
                   mtl >= 2.2.1,
                   pcg-random >= 0.1.3.2,
                   rdtsc >= 1.3.0.1,
                   thread-local-storage >= 0.1.0.3,
                   time >= 1.5.0,
                   vector >= 0.11.0.0
    default-language: Haskell2010
    if flag(debug)
      ghc-options: -eventlog
      ghc-options: -keep-tmp-files -dsuppress-module-prefixes
                   -ddump-to-file -ddump-core-stats -ddump-simpl-stats -dcore-lint
                   -dcmm-lint -ddump-ds -ddump-simpl -ddump-stg -ddump-asm
                   -ddump-bcos -ddump-cmm -ddump-opt-cmm -ddump-inlinings
