name:                adaptive-queue
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Vikraman Choudhury
maintainer:          git@vikraman.org
-- copyright:
category:            Concurrency
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Data.Concurrent.IORef
                     , Control.Concurrent.PureQueue
                     , Control.Concurrent.Adaptive.AdaptiveQueue
  other-modules:       Control.Concurrent.Adaptive.MichaelScottQueue
                     , Control.Concurrent.Adaptive.ChaseLevDeque
  other-extensions:    BangPatterns
  build-depends:       base >=4.8 && <4.9
                     , containers >=0.5 && <0.6
                     , atomic-primops >=0.8 && <0.9
                     , bytestring >=0.10 && <0.11
                     , ghc-prim >=0.4 && <0.5
                     , vector >=0.10 && <0.12
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:       -O2 -Wall
